--- a/public/project/css/Contact.css
+++ b/public/project/css/Contact.css
@@ -105,28 +105,29 @@ ol {
 
 /* ========== BANNER ========== */
 .baner {
-  background-image: url('images/Contactimg.jpg');
-  background-size: cover;
-  background-position: center;
-  height: 70vh;
-  width: 100%;
-  position: relative;
-  transition: background-image 0.8s ease-in-out;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  height: 70vh; /* Full screen height */
+  overflow: hidden;
 }
 
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-top-right-radius: 15px;
+  border-top-left-radius:15px ;
+}
 .baner h1 {
   color: white;
   font-size: 98px;
   font-weight: 400;
   font-family: Italiana, serif;
-  margin-top: 150px;
+  margin-top: 10px;
+  text-align: center;
+  
 }
 
 .baner p {
@@ -134,6 +135,7 @@ ol {
   color: white;
   font-family: Inter, sans-serif;
   font-weight: 400;
+  text-align: center;
 }
 
 
@@ -418,14 +420,25 @@ button[type="submit"] {
     width: 80px;
   }
 
-  .baner h1 {
-    font-size: 42px;
-    margin-top: 69px;
-  }
+.baner h1 {
+  color: white;
+  font-size: 34px;
+  font-weight: 400;
+  font-family: Italiana, serif;
+  margin-top: 10px;
+  text-align: justify;
+  
+}
 
-  .baner p {
-    font-size: 15px;
-  }
+.baner p {
+  width: auto;
+  font-size: 10px;
+  color: white;
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  text-align: start;
+}
+
 
   
 .left-section img {
@@ -526,10 +539,13 @@ button[type="submit"] {
     height: 80px;
     width: 100px;
   }
+ 
 
   .baner h1 {
+
     font-size: 50px;
-    margin-top: 52px;
+    margin-top: 82px;
+   
   }
 
   .baner p {
