--- a/public/project/css/Destination.css
+++ b/public/project/css/Destination.css
@@ -122,21 +122,23 @@ nav div ul {
 }
 
 .baner {
-    background-image: url('images/Contactimg.jpg');
-    background-size: cover;
-    background-position: center;
     height: 80vh;
+    overflow: hidden;
+
+}
+
+.banner-img {
     width: 100%;
-    position: relative;
-    transition: background-image 0.8s ease-in-out;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
+
 
 .baner h1 {
     color: white;
@@ -359,12 +361,13 @@ input[type="email"] {
     }
 
     .img-fluid {
-    border-radius: 16px !important;
-}
+        border-radius: 16px !important;
+    }
 
     .baner h1 {
-        font-size: 40px;
-        margin-top: 70px;
+        width: 100%;
+        font-size: 26px;
+        margin-top: 120px;
     }
 
     .baner p {
@@ -476,7 +479,7 @@ input[type="email"] {
 
     .baner h1 {
         font-size: 50px !important;
-        margin-top: 64px;
+        margin-top: 91px;
     }
 
     .baner p {
@@ -567,7 +570,7 @@ input[type="email"] {
 
     .baner h1 {
         font-size: 70px;
-        margin-top: 90px;
+        margin-top: 160px;
     }
 
     .baner p {
@@ -588,7 +591,7 @@ input[type="email"] {
         padding: 0px;
     }
 
-        .image p {
+    .image p {
         position: absolute;
         top: 50%;
         left: 50%;
