--- a/public/project/css/Detailes.css
+++ b/public/project/css/Detailes.css
@@ -122,25 +122,29 @@ nav div ul {
 }
 
 .baner {
-    background-image: url('images/Contactimg.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 80vh;
+  height: 90vh;
+  overflow: hidden;
+}
+
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.baner-heading{
     width: 100%;
-    position: relative;
-    transition: background-image 0.8s ease-in-out;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
 
 .baner h1 {
     color: white;
-    font-size: 95px;
+    font-size: 90px;
     font-weight: 400;
     font-family: Italiana, serif;
     margin-top: 120px;
